--- a/Minecraft/Minecraft.vcxproj.filters
+++ b/Minecraft/Minecraft.vcxproj.filters
@@ -15,21 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\VoxelEngine\Core.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VoxelEngine\Application.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VoxelEngine.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="src\VoxelEngine\EntryPoint.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="src\VoxelEngine\Application.cpp">
+    <ClCompile Include="src\Minecraft.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
