--- a/VoxelEngine/VoxelEngine.vcxproj.filters
+++ b/VoxelEngine/VoxelEngine.vcxproj.filters
@@ -27,6 +27,21 @@
     <ClInclude Include="src\VoxelEngine\EntryPoint.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Events\ApplicationEvent.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Events\Event.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Events\KeyEvent.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Events\MouseEvent.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hzpch.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\VoxelEngine\Log.cpp">
