--- a/VoxelEngine/VoxelEngine.vcxproj.filters
+++ b/VoxelEngine/VoxelEngine.vcxproj.filters
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+    <Filter Include="Platform">
+      <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\Windows">
+      <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
+    </Filter>
     <Filter Include="VoxelEngine">
       <UniqueIdentifier>{C9F2F76B-35A8-7061-BE9C-6A382A516765}</UniqueIdentifier>
     </Filter>
@@ -9,8 +15,14 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\VoxelEngine.h" />
     <ClInclude Include="src\VoxelEngine\Application.h">
+      <Filter>VoxelEngine</Filter>
+    </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Core.h">
       <Filter>VoxelEngine</Filter>
     </ClInclude>
     <ClInclude Include="src\VoxelEngine\EntryPoint.h">
@@ -31,11 +43,15 @@
     <ClInclude Include="src\VoxelEngine\Log.h">
       <Filter>VoxelEngine</Filter>
     </ClInclude>
+    <ClInclude Include="src\VoxelEngine\Window.h">
+      <Filter>VoxelEngine</Filter>
+    </ClInclude>
     <ClInclude Include="src\vepch.h" />
-    <ClInclude Include="src\VoxelEngine\Window.h" />
-    <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
+      <Filter>Platform\Windows</Filter>
+    </ClCompile>
     <ClCompile Include="src\VoxelEngine\Application.cpp">
       <Filter>VoxelEngine</Filter>
     </ClCompile>
@@ -43,6 +59,5 @@
       <Filter>VoxelEngine</Filter>
     </ClCompile>
     <ClCompile Include="src\vepch.cpp" />
-    <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
   </ItemGroup>
 </Project>
